monitoring/victoria-logs/gateway-policies.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: victoria-logs-server-no-authz
  namespace: monitoring
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: victoria-logs-server
